--- a/index.html
+++ b/index.html
@@ -1417,10 +1417,10 @@
       const pinkText = pinkBubble.querySelector('span');
 
       const blackLines = [
-        "happy valentine’s day:>",
+        "happy valentine’s day baby",
         "i love you",
         "you deserve it all",
-        "you’re my favorite person",
+        "you’re my favorite",
         "my baby"
       ];
 
@@ -1483,3 +1483,4 @@
     </script>
 </body>
 </html>
+
