--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
 
       if (t >= 6 && t < 17.5) return 'day';
       if (t >= 17.5 && t < 18.5) return 'evening';
-      return 'day';
+      return 'night';
     }
 
     function animateCat(selector, frameTime) {
@@ -1487,3 +1487,4 @@
     </script>
 </body>
 </html>
+
