--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
 
       if (t >= 6 && t < 17.5) return 'day';
       if (t >= 17.5 && t < 18.5) return 'evening';
-      return 'night';
+      return 'day';
     }
 
     function animateCat(selector, frameTime) {
@@ -1404,14 +1404,7 @@
     ========================= */
 
     (function valentinesCats() {
-      const now = new Date();
-      const isValentines =
-      now.getMonth() === 1 &&
-      now.getDate() === 14 &&
-      !scene.classList.contains('night');
-
-
-      if (!isValentines || scene.classList.contains('night')) return;
+      if (scene.classList.contains('night')) return;
 
       const blackBubble = document.querySelector('.speech-bubble.black-cat');
       const pinkBubble = document.querySelector('.thought-bubble.pink-cat');
@@ -1421,7 +1414,7 @@
       const pinkText = pinkBubble.querySelector('span');
 
       const blackLines = [
-        "happy valentine’s day baby",
+        "bisous",
         "i love you",
         "you deserve it all",
         "you’re my favorite",
@@ -1487,4 +1480,3 @@
     </script>
 </body>
 </html>
-
